# KKEditQT

./: .gitignore  ChangeLog  KSyntaxHighlighting.pc  Makefile.am  Makefile.in  README.md  TODO  autogen.sh  buildplugs.sh  config.h.in  configure.ac  configure.qt5.ac  remakesourcelist  setuptools
CreatePlugins/: CreatePlugin
CreatePlugins/PLUGNAME/plugin/: PLUGNAME.cpp  PLUGNAME.h  PLUGNAME.json  plugin.pro
KKEditQT/: flagsandlibs  sources
KKEditQT/app/: Makefile.am  Makefile.in
KKEditQT/helpers/: Makefile.am  kkeditqtmsg  kkeditqtmsg.cpp  kkeditqtprogressbar  kkeditqttagreader  kkeditqttagreader.cpp
KKEditQT/kkeditqtmsg/: Makefile.am  main.cpp
KKEditQT/langplugins/cpplang/plugin/: cpplang.json  plugin.pro
KKEditQT/langplugins/golang/plugin/: golang.cpp  golang.json  plugin.pro
KKEditQT/langplugins/htmllang/: htmllang.pro
KKEditQT/langplugins/htmllang/plugin/: htmllang.h  htmllang.json  plugin.pro
KKEditQT/langplugins/javalang/plugin/: plugin.pro
KKEditQT/langplugins/jslang/plugin/: jslang.cpp  jslang.h  jslang.json  plugin.pro
KKEditQT/langplugins/jsonlang/plugin/: jsonlang.cpp  jsonlang.h  jsonlang.json  plugin.pro
KKEditQT/langplugins/makelang/plugin/: makelang.cpp  plugin.pro
KKEditQT/langplugins/phplang/plugin/: phplang.cpp  phplang.json  plugin.pro
KKEditQT/langplugins/pythonlang/plugin/: plugin.pro  pythonlang.cpp
KKEditQT/langplugins/shlang/plugin/: plugin.pro  shlang.cpp  shlang.h  shlang.json
KKEditQT/languageplugins/cpplang/plugin/: cpplang.cpp  cpplang.h  cpplang.json  plugin.pro
KKEditQT/languageplugins/golang/plugin/: golang.cpp  golang.h  plugin.pro
KKEditQT/languageplugins/htmllang/plugin/: htmllang.cpp  htmllang.h  plugin.pro
KKEditQT/languageplugins/javalang/plugin/: javalang.cpp  javalang.h  javalang.json  plugin.pro
KKEditQT/languageplugins/jslang/plugin/: jslang.cpp  jslang.h  jslang.json  plugin.pro
KKEditQT/languageplugins/jsonlang/plugin/: jsonlang.cpp  jsonlang.h  plugin.pro
KKEditQT/languageplugins/makelang/plugin/: makelang.cpp  makelang.h  makelang.json  plugin.pro
KKEditQT/languageplugins/phplang/plugin/: phplang.cpp  phplang.h  plugin.pro
KKEditQT/languageplugins/pythonlang/plugin/: plugin.pro  pythonlang.cpp  pythonlang.h  pythonlang.json
KKEditQT/languageplugins/shlang/plugin/: plugin.pro  shlang.cpp  shlang.h  shlang.json
KKEditQT/plugins/Clipboard/plugin/: Clipboard.cpp  Clipboard.h  Clipboard.json  plugin.pro
KKEditQT/plugins/DocumentationPlugin/plugin/: DocumentationPlugin.cpp  DocumentationPlugin.h  DocumentationPlugin.json  plugin.pro
KKEditQT/plugins/DocumentationPlugin/plugin/actions/: 200-choose.info  50-searchqt5api.info  50-searchqt5clases.info  60-searchqt6api.info  60-searchqt6classes.info  70-searchgtk2api.info  72-searchgtk3api.info  74-searchgtkdocsapi.info  76-searchqt5apis.info  78-searchqt6apis.info  80-docset.info  80-searchall.info  choosedocset  searchall  searchdocsets  searchgtk2api  searchgtk3api  searchgtkdocsapi  searchqt5api  searchqt5apis  searchqt5classes  searchqt6api  searchqt6apis  searchqt6classes
KKEditQT/plugins/DocumentationPlugin/plugin/docs/: help.html
KKEditQT/plugins/Favourites/plugin/: Favourites.cpp  Favourites.h  Favourites.json  plugin.pro
KKEditQT/plugins/HTMLTags/plugin/: HTMLTags.cpp  HTMLTags.h  HTMLTags.json  plugin.pro
KKEditQT/plugins/HTMLTags/plugin/actions/: 0000-HTML Tags  0002-Preview In Browser  0004-Remove Tags  0040-Skeleton  0045-Head  0050-Title  0060-Meta  0062-Base  0064-Style  0070-Divider  0070-Script  0080-Comment  0081-UnComment  0082-Address  0090-Break  0095-Multi Line Break  0110-Bold  0120-Italic  0130-Underline  0132-Strike Through  0200-Code  0205-Heading  0210-Image  0220-Paragraph  0230-Preformated  0240-Center  0250-Left  0260-Right  0270-Justify  0300-Font  (+19 more)
KKEditQT/plugins/OpenUri/plugin/: OpenUri.cpp  OpenUri.h  OpenUri.json  plugin.pro
KKEditQT/plugins/SaveHistory/plugin/: SaveHistory.cpp  SaveHistory.h  SaveHistory.json  plugin.pro
KKEditQT/plugins/SymbolsMenu/plugin/: SymbolsMenu.cpp  SymbolsMenu.h  SymbolsMenu.json  indicator-chars.txt  plugin.pro
KKEditQT/plugins/TerminalPlugin/plugin/: QT_prefsWidgets.cpp  QT_prefsWidgets.h  TerminalPlugin.cpp  TerminalPlugin.h  TerminalPlugin.json  plugin.pro  xinst.tpxrc
KKEditQT/plugins/kkeditqtPluginExample/plugin/: kkeditqtPluginExample.cpp  kkeditqtPluginExample.h  kkeditqtPluginExample.json  plugin.pro
KKEditQT/pole/: Makefile.am  main.cpp
KKEditQT/resources/Example External Tools/scripts/: testbar
KKEditQT/resources/Example External Tools/tools/: Test-Bar
KKEditQT/resources/docs/: Doxyfile  makedocset
KKEditQT/resources/icons/kkeditqticons/: index.theme
KKEditQT/resources/pixmaps/: KKEditQT.desktop  KKEditQTRoot.desktop
KKEditQT/resources/themes/: Grey.theme  OldyXMas.theme  Root.theme  Spring.theme  Winter.theme  Wood.theme  default.json  grey.json  root.json  spring.json  standardcolours  winter.json  wood.json
KKEditQT/src/: ChooserDialog.cpp  ChooserDialog.h  Doxyfile  KKEditClass.cpp  KKEditClass.h  KKEditClassCallbacks.cpp  KKEditClassDocuments.cpp  KKEditClassFiles.cpp  KKEditClassGUIs.cpp  KKEditClassMenus.cpp  KKEditClassSearch.cpp  KKEditClassTools.cpp  LFSTKFindClass.cpp  LFSTKFindClass.h  LFSTKUtilityClass.cpp  LFSTKUtilityClass.h  MainWindow.cpp  MainWindow.h  PluginCommon.h  QT_AboutBox.cpp  QT_AboutBox.h  QT_ProxyStyle.cpp  QT_ProxyStyle.h  QT_SpellCheck.cpp  QT_SpellCheck.h  QT_document.cpp  QT_document.h  QT_highlighter.cpp  QT_highlighter.h  QT_historyClass.cpp  QT_historyClass.h  QT_menuitem.cpp  QT_menuitem.h  QT_notebook.cpp  QT_notebook.h  QT_recentMenu.cpp  QT_recentMenu.h  QT_tabColoursClass.cpp  QT_tabColoursClass.h  QT_themeClass.cpp  (+20 more)
KKEditQT/toolkitplugins/gtk2toolkit/plugin/: gtk2toolkit.cpp  gtk2toolkit.h  gtk2toolkit.json  plugin.pro
KKEditQT/toolkitplugins/qt5toolkit/plugin/: plugin.pro  qt5toolkit.cpp  qt5toolkit.h  qt5toolkit.json
KKEditQT/toolkitplugins/qttoolkit/plugin/: plugin.pro  qttoolkit.cpp  qttoolkit.h  qttoolkit.json
PrivateDevFiles/: MakeKKEditQTAppImage  startxroot
docs/: index.html
(+4 files in other folders)
