
include ../flagsandlibs

#libexecdir = $(exec_prefix)/libexec/KKEditQT

bin_PROGRAMS = kkeditqtmsg kkeditqttagreader kkeditqtprogressbar

kkeditqtmsg_SOURCES = kkeditqtmsg.cpp
kkeditqttagreader_SOURCES = kkeditqttagreader.cpp
kkeditqtprogressbar_SOURCES = kkeditqtprogressbar.cpp

all:
	strip --strip-all kkeditqtmsg
	strip --strip-all kkeditqttagreader
	strip --strip-all kkeditqtprogressbar

